--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="CarvingScaler.styles.css" rel="stylesheet" />
+
+    <!-- Emergency inline fallback: forces left-sidebar layout if scoped CSS isn't applied -->
+    <style>
+      @media (min-width: 641px) {
+        .page { display: flex !important; flex-direction: row !important; }
+        .sidebar { width: 250px !important; height: 100vh !important; position: sticky !important; top: 0 !important; }
+        .top-row { position: sticky !important; top: 0 !important; z-index: 1 !important; }
+        .collapse { display: block !important; }
+      }
+    </style>
+
     <script type="importmap"></script>
 </head>
 
