--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,12 +14,19 @@
 
     <!-- Emergency inline fallback: forces left-sidebar layout if scoped CSS isn't applied -->
     <style>
+      /* Layout fallback for wide viewports */
       @media (min-width: 641px) {
         .page { display: flex !important; flex-direction: row !important; }
         .sidebar { width: 250px !important; height: 100vh !important; position: sticky !important; top: 0 !important; }
         .top-row { position: sticky !important; top: 0 !important; z-index: 1 !important; }
         .collapse { display: block !important; }
       }
+
+      /* NavMenu (title bar) fallback — dark navbar and readable brand */
+      .top-row.navbar { background-color: rgba(0,0,0,0.4) !important; min-height: 3.5rem !important; }
+      .top-row.navbar .navbar-brand { color: #fff !important; font-size: 1.1rem !important; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+      .navbar-toggler { background-color: rgba(255,255,255,0.1) !important; }
+      .nav-item a { color: #d7d7d7 !important; }
     </style>
 
     <script type="importmap"></script>
